environments/lm.rwx.dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: listmonk
spec:
  replicas: 1
  template:
    spec:
      serviceAccountName: listmonk
      containers:
      - name: listmonk
        image: listmonk-image
        ports:
        - containerPort: 9000
        volumeMounts:
            - name: listmonk-secrets
              mountPath: /mnt/vault-secrets-store
              readOnly: true
      volumes:
        - name: listmonk-secrets
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: listmonk-secrets
