environments/lm.rwx.dev/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: listmonk-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/affinity-mode: persistent
    nginx.ingress.kubernetes.io/session-cookie-secure: "true"
    nginx.ingress.kubernetes.io/session-cookie-change-on-failure: "true"
    external-dns.alpha.kubernetes.io/hostname: "lm.alanw.ai"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - lm.alanw.ai
      secretName: tls-cert
  rules:
    - host: "lm.alanw.ai"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: listmonk
                port:
                  name: listmonk
